# conan_example

./: .gitignore
hello/: .clangd  CMakeLists.txt  conanfile.py
hello/src/: hello.cpp
say/: CMakeLists.txt  conanfile.py  say-config.cmake.in
say/src/say/: CMakeLists.txt  say.cpp  say.h
